logs/felapps.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/felapps'...
Listing './lib/python3.5/site-packages/felapps/apps'...
Listing './lib/python3.5/site-packages/felapps/apps/appdrawer'...
Listing './lib/python3.5/site-packages/felapps/apps/cornalyzer'...
Listing './lib/python3.5/site-packages/felapps/apps/cornalyzer_old'...
Listing './lib/python3.5/site-packages/felapps/apps/dataworkshop'...
Listing './lib/python3.5/site-packages/felapps/apps/felformula'...
Listing './lib/python3.5/site-packages/felapps/apps/imageviewer'...
Listing './lib/python3.5/site-packages/felapps/apps/matchwizard'...
Listing './lib/python3.5/site-packages/felapps/apps/wxmpv'...
Listing './lib/python3.5/site-packages/felapps/configs'...
Listing './lib/python3.5/site-packages/felapps/facilities'...
Compiling './lib/python3.5/site-packages/felapps/facilities/dcls.py'...
***   File "./lib/python3.5/site-packages/felapps/facilities/dcls.py", line 89
    print "you call me (import) for what?"
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/felapps/physics'...
Compiling './lib/python3.5/site-packages/felapps/physics/felbase.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (felbase.py, line 93)
Listing './lib/python3.5/site-packages/felapps/utils'...
Compiling './lib/python3.5/site-packages/felapps/utils/datautils.py'...
***   File "./lib/python3.5/site-packages/felapps/utils/datautils.py", line 359
    print x0, sx
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/felapps/utils/funutils.py'...
***   File "./lib/python3.5/site-packages/felapps/utils/funutils.py", line 516
    print 'save sdds format to be implemented.'
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/felapps/utils/imageutils.py'...
***   File "./lib/python3.5/site-packages/felapps/utils/imageutils.py", line 177
    print "Add selected image to workspace"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/felapps/utils/parseutils.py'...
***   File "./lib/python3.5/site-packages/felapps/utils/parseutils.py", line 107
    print testparser.makeHierDict()
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/felapps-1.5.14.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/felapps'...
Listing './share/icons'...
Listing './share/icons/hicolor'...
Listing './share/icons/hicolor/128x128'...
Listing './share/icons/hicolor/128x128/apps'...
Listing './share/icons/hicolor/16x16'...
Listing './share/icons/hicolor/16x16/apps'...
Listing './share/icons/hicolor/256x256'...
Listing './share/icons/hicolor/256x256/apps'...
Listing './share/icons/hicolor/32x32'...
Listing './share/icons/hicolor/32x32/apps'...
Listing './share/icons/hicolor/48x48'...
Listing './share/icons/hicolor/48x48/apps'...
Listing './share/icons/hicolor/512x512'...
Listing './share/icons/hicolor/512x512/apps'...
Listing './share/python-wheels'...
